get file media type based on the extension

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "cwchar": "cpp",
     "cwctype": "cpp",
     "deque": "cpp",
+    "map": "cpp",
     "unordered_map": "cpp",
     "vector": "cpp",
     "exception": "cpp",
