add FileSystem class

--- a/src/Config/default.conf
+++ b/src/Config/default.conf
@@ -1,4 +1,13 @@
-// default error pages
-// port
-// default files[index.html, index...]
-// cgi path
+server {
+    server_name test
+    listen [port] 
+    505 index.html
+    404 index.html
+    index index.html
+    root path/aa
+    auto_index on
+    maxbodysize 400
+    return {
+        redirect path/ss
+    }
+}
