--- a/src/Config/default.conf
+++ b/src/Config/default.conf
@@ -1,13 +1,20 @@
 server {
     server_name test
-    listen [port] 
+    listen 80
+    listen 8000
+    listen 200
     505 index.html
     404 index.html
+    index index.html index.php
+    root path/aa
+    php /path/to/
+    maxbodysize 400
+}
+
+server {
+    server_name test2
+    listen [port] 
     index index.html
     root path/aa
     auto_index on
-    maxbodysize 400
-    return {
-        redirect path/ss
-    }
 }
