--- a/src/Config/default.conf
+++ b/src/Config/default.conf
@@ -7,8 +7,19 @@ server {
     404 index.html
     index index.html index.php
     root path/aa
-    php /path/to/
-    maxbodysize 400
+    cgi .php /path/to/
+
+    client_max_body_size 400
+
+    limit_except POST DELETE
+    root www/test/
+
+    location /uploads {
+        limit_except POST DELETE
+        client_max_body_size 200
+        upload_path path/yo
+        root www/test/
+    }
 }
 
 server {
