--- a/nouha/webserv/Makefile
+++ b/nouha/webserv/Makefile
@@ -1,9 +1,10 @@
 NAME = webserv
 
-SRC  = 	main.cpp				\
-		parser/ParseConfig.cpp	\
-		parser/Config.cpp		\
-		utils/Utils.cpp			\
+SRC  = 	main_req.cpp				\
+		parser/ParseConfig.cpp		\
+		parser/Config.cpp			\
+		parser/Request.cpp			\
+		utils/Utils.cpp				\
 
 FLAGS = -std=c++98 #-Wall -Wextra -Werror 
 
