refactoring server class

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,17 +1,28 @@
 server {
-    server_name test hello# can be multi
-    # listen 80 # the port too can be multi
-    listen 8000
+    # server_name test hello# can be multi
+    listen 80 # the port too can be multi
+    # listen 8000
     # listen 200
-    page_error 505 index.html # this is error can be multi
-    page_error 404 index.html
-    index index.html index.php # can be multi
-    root path/aa1
-    cgi .php /path/to/ # can be multi
-    client_max_body_size 400 # just integer
-    allow_methods POST GET
-    upload_path file_uploads
-    redirection 301 $scheme://www.mysite.com
+    # page_error 505 index.html # this is error can be multi
+    # page_error 404 index.html
+    # index index.html index.php # can be multi
+    # root path/aa1
+    # cgi .php /path/to/ # can be multi
+    # client_max_body_size 400 # just integer
+    # allow_methods POST GET
+    # upload_path file_uploads
+    # redirection 301 $scheme://www.mysite.com
+    # location /test {
+    #     server_name nouha
+    #     root path/aa3
+    #     page_error 505 index.html
+    #     allow_methods POST GET
+    #     upload_path regerg
+    # }
+    # location /BETA {
+    #     root fwefwef
+    #     redirection 301 $scheme://www.mysite.com
+    # }
 }
 # can be multi servers
 # server {
