--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,10 +1,10 @@
 server {
     server_name test hello# can be multi
     # listen 8000 # the port too can be multi
-    listen 8003
+    listen 8000
     #listen 200
     page_error 505 index.html # this is error can be multi
-    # page_error 404 index.html
+    page_error 404 errorPages/404.html
     index index.html index.php # can be multi
     root path/aa1
     cgi .php /path/to/ # can be multi
