--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,8 +1,8 @@
 server {
-    server_name test hello# can be multi
-    # listen 8000 # the port too can be multi
+    server_name localhost# can be multi
+    # listen 800000 # the port too can be multi
     listen 8000
-    #listen 200
+    #listen 209
     page_error 505 index.html # this is error can be multi
     page_error 404 errorPages/404.html
     index index.html index.php # can be multi
@@ -13,7 +13,7 @@ server {
     upload_path file_uploads
     redirection 301 $scheme://www.mysite.com
     location /test {
-        # server_name nouha
+        # server_name localhost.com
         root path/aa3
         page_error 505 index.html
         allow_methods POST GET
@@ -26,8 +26,9 @@ server {
 }
 # can be multi servers
 server {
-    server_name test2
-    # listen 7000
+    server_name test
+    listen 8000   
+    # listen 800000
     index index.html
     root path/aa2
     auto_index on
