fixing segfault and compiling errors

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8004
+    listen 8000
     #listen 209
     page_error 505 index.html # this is error can be multi
     page_error 404 errorPages/404.html
@@ -25,15 +25,15 @@ server {
     }
 }
 # can be multi servers
-server {
-    server_name test
-    listen 8004
-    # listen 800000
-    index index.html
-    root path/aa2
-    auto_index on
-    location /BETA {
-        root fwefwef
-        redirection 301 $scheme://www.mysite.com
-    }
-}
+# server {
+#     server_name test
+#     listen 8004
+#     # listen 800000
+#     index index.html
+#     root path/aa2
+#     auto_index on
+#     location /BETA {
+#         root fwefwef
+#         redirection 301 $scheme://www.mysite.com
+#     }
+# }
