--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,18 +1,18 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8000
+    listen 8001
     #listen 209
     page_error 505 index.html # this is error can be multi
     page_error 404 errorPages/404.html
     index index.html index.php # can be multi
-    root path/aa1
+    root tests/
     cgi .php /path/to/ # can be multi
     client_max_body_size 400 # just integer
     allow_methods POST GET
     upload_path file_uploads
-    redirection 301 $scheme://www.mysite.com
-    location /test {
+    redirection 302 http://www.google.com/
+    location /staticWebsite {
         # server_name localhost.com
         root path/aa3
         page_error 505 index.html
@@ -21,7 +21,8 @@ server {
     }
     location /BETA {
         root fwefwef
-        redirection 301 $scheme://www.mysite.com
+        redirection 301 /img/avatar.png
+        # redirection 301 $scheme://www.mysite.com
     }
 }
 # can be multi servers
