use location config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -72,6 +72,7 @@
     "__hash_table": "cpp",
     "complex": "cpp",
     "filesystem": "cpp",
-    "set": "cpp"
+    "set": "cpp",
+    "csignal": "cpp"
   }
 }
