--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -2,26 +2,27 @@ server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
     listen 8001
-    #listen 209
+    # listen 209
     page_error 505 index.html # this is error can be multi
-    page_error 404 errorPages/404.html
     index index.html index.php # can be multi
     root tests/
     cgi .php /path/to/ # can be multi
     client_max_body_size 400 # just integer
     allow_methods POST GET
-    upload_path file_uploads
-    redirection 302 http://www.google.com/
-    location /staticWebsite {
+    upload_path uploads
+    # redirection 302 http://www.facebook.com/
+    # redirection 302 /staticWebsite
+    location /staticWebsite/ {
         # server_name localhost.com
-        root path/aa3
-        page_error 505 index.html
+        #root tests/
+        page_error 404 errorPages/404.html
         allow_methods POST GET
-        upload_path regerg
+        upload_path path
+        # redirection 302 http://www.google.com/
     }
     location /BETA {
-        root fwefwef
-        redirection 301 /img/avatar.png
+        # root fwefwef
+        # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
     }
 }
