--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,12 +1,12 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8004
+    listen 8001
     # listen 209
     page_error 505 index.html # this is error can be multi
     # index index.html index.php # can be multi
     root tests/
-    cgi .php /path/to/ # can be multi
+    cgi php /path/to/ # can be multi
     client_max_body_size 400 # just integer
     allow_methods POST GET DELETE
     upload_path uploads
