keeping the connection alive

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -8,9 +8,8 @@ server {
     root tests/
     cgi php /path/to/ # can be multi
     client_max_body_size 400 # just integer
-    allow_methods POST GET DELETE
+    allow_methods GET
     upload_path uploads
-    auto_index on
     # redirection 302 /staticWebsite
     # redirection 302 http://www.google.com/
     location /staticWebsite/ {
@@ -18,8 +17,9 @@ server {
         # listen #error
         #root tests/
         page_error 404 errorPages/404.html
-        allow_methods POST GET
+        # allow_methods POST
         upload_path path
+        # auto_index off
         # redirection 302 http://www.facebook.com/
     }
     location /BETA {
@@ -27,6 +27,7 @@ server {
         # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
     }
+    auto_index on
     # redirection 302 http://www.facebook.com/
 }
 # can be multi servers
