--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -7,10 +7,10 @@ server {
     # index index.html index.php # can be multi
     root tests/
     cgi php /path/to/ # can be multi
-    client_max_body_size 400 # just integer
-    allow_methods GET
+    # client_max_body_size 400 # just integer
     upload_path uploads
     # redirection 302 /staticWebsite
+    auto_index on
     # redirection 302 http://www.google.com/
     location /staticWebsite/ {
         # server_name localhost.com #error
@@ -18,16 +18,17 @@ server {
         #root tests/
         page_error 404 errorPages/404.html
         # allow_methods POST
-        upload_path path
         # auto_index off
         # redirection 302 http://www.facebook.com/
     }
-    location /BETA {
+    location /uploads {
+        # allow_methods DELETE POST
+        upload_path tests/
+        # client_max_body_size 10000
         # root fwefwef
         # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
     }
-    auto_index on
     # redirection 302 http://www.facebook.com/
 }
 # can be multi servers
