upload text files

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -4,7 +4,7 @@ server {
     listen 8001
     # listen 209
     page_error 505 index.html # this is error can be multi
-    # index index.html index.php # can be multi
+    index index.html #index.php # can be multi
     root tests/
     cgi php /path/to/ # can be multi
     # client_max_body_size 400 # just integer
@@ -15,7 +15,7 @@ server {
     location /staticWebsite/ {
         # server_name localhost.com #error
         # listen #error
-        #root tests/
+        root tests/staticWebsite/
         page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
