--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8001
+    listen 8002
     # listen 209
     page_error 505 index.html # this is error can be multi
     index index.html #index.php # can be multi
@@ -15,7 +15,7 @@ server {
     location /staticWebsite/ {
         # server_name localhost.com #error
         # listen #error
-        root tests/staticWebsite/
+        # root tests/staticWebsite/
         page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
