--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -12,10 +12,10 @@ server {
     # redirection 302 /staticWebsite
     auto_index on
     # redirection 302 http://www.google.com/
-    location /staticWebsite/ {
+    location /website {
         # server_name localhost.com #error
         # listen #error
-        # root tests/staticWebsite/
+        root tests/staticWebsite/
         page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
