--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,10 +1,10 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8002
+    listen 8001
     # listen 209
     page_error 505 index.html # this is error can be multi
-    # index index.html index.php # can be multi
+    index index.html #index.php # can be multi
     root tests/
     cgi php /path/to/ # can be multi
     # client_max_body_size 400 # just integer
@@ -12,10 +12,10 @@ server {
     # redirection 302 /staticWebsite
     auto_index on
     # redirection 302 http://www.google.com/
-    location /staticWebsite/ {
+    location /website {
         # server_name localhost.com #error
         # listen #error
-        #root tests/
+        root tests/staticWebsite/
         page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
