change reading request buffer

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -24,7 +24,7 @@ server {
     location /uploads {
         # allow_methods DELETE POST
         upload_path tests/
-        # client_max_body_size 10000
+        client_max_body_size 500
         # root fwefwef
         # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
