--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,8 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 8001
+    listen 127.0.0.500:8001
+    listen 8007
     # listen 209
     page_error 505 index.html # this is error can be multi
     index index.html #index.php # can be multi
@@ -18,7 +19,7 @@ server {
         root tests/staticWebsite/
         page_error 404 errorPages/404.html
         # allow_methods POST
-        # auto_index off
+        auto_index on
         # redirection 302 http://www.facebook.com/
     }
     location /uploads {
@@ -30,6 +31,7 @@ server {
         # redirection 301 $scheme://www.mysite.com
     }
     # redirection 302 http://www.facebook.com/
+    # auto_index off
 }
 # can be multi servers
 # server {
