--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,8 +1,8 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 127.0.0.500:8003
-    listen 8007
+    listen 127.0.0.500:8001
+    # listen 8007
     # listen 209
     page_error 505 index.html # this is error can be multi
     index index.html #index.php # can be multi
