send response by chunkes

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -20,9 +20,10 @@ server {
         # server_name localhost.com #error
         # listen #error
         root tests/staticWebsite/
-        page_error 404 errorPages/404.html
+        # page_error 404 errorPages/404.html
         # allow_methods POST
-        auto_index on
+        # auto_index on
+        # index index.html # todo wtf
         # redirection 302 http://www.facebook.com/
     }
     location /uploads {
