--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 127.0.0.500:8000
+    listen 127.0.0.500:8002
     # listen 8007
     # listen 209
     page_error 505 index.html # this is error can be multi
@@ -14,7 +14,7 @@ server {
     # client_max_body_size 400 # just integer
     upload_path uploads
     # redirection 302 /staticWebsite
-    auto_index on
+    # auto_index on
     # redirection 302 http://www.google.com/
     location /website {
         # server_name localhost.com #error
@@ -22,20 +22,19 @@ server {
         root tests/staticWebsite/
         # page_error 404 errorPages/404.html
         # allow_methods POST
-        # auto_index on
-        # index index.html # todo wtf
+        # auto_index off
         # redirection 302 http://www.facebook.com/
     }
-    location /uploads {
-        # allow_methods DELETE POST
-        upload_path tests/
+    # location /uploads {
+    #     # allow_methods DELETE POST
+    #     upload_path tests/
         # client_max_body_size 10000
         # root fwefwef
         # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
-    }
+    # }
     # redirection 302 http://www.facebook.com/
-    # auto_index off
+    auto_index on
 }
 # can be multi servers
 # server {
