--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 127.0.0.500:8002
+    listen 127.0.0.500:8001
     # listen 8007
     # listen 209
     page_error 505 index.html # this is error can be multi
@@ -24,15 +24,17 @@ server {
         # allow_methods POST
         # auto_index off
         # redirection 302 http://www.facebook.com/
+        #recieved:12799346|
+        #         2000000000
     }
-    # location /uploads {
-    #     # allow_methods DELETE POST
-    #     upload_path tests/
+    location /uploads {
+        allow_methods DELETE POST
+        upload_path tests/
         # client_max_body_size 10000
         # root fwefwef
         # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
-    # }
+    }
     # redirection 302 http://www.facebook.com/
     auto_index on
 }
