--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8001
+    listen 0.0.0.0:8000
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -13,7 +13,7 @@ server {
     cgi bla ./cgi-bin/cgi_tester # can be multi
     
     # client_max_body_size 400 # just integer
-    upload_path uploads
+    # upload_path uploads
     # redirection 302 /staticWebsite
     # auto_index on
     # redirection 302 http://www.google.com/
