--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8000
+    listen 0.0.0.0:8001
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -9,7 +9,8 @@ server {
     index index.html #index.php # can be multi
     root tests/ 
     cgi php ./cgi-bin/php-cgi # can be multi
-    cgi py /usr/bin/python # can be multi
+    # cgi py /usr/bin/python # can be multi
+    cgi py /home/linuxbrew/.linuxbrew/bin/python3
     cgi bla ./cgi-bin/cgi_tester # can be multi
     
     # client_max_body_size 400 # just integer
