upload isnt working

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -9,8 +9,8 @@ server {
     index index.html #index.php # can be multi
     root tests/ 
     cgi php ./cgi-bin/php-cgi # can be multi
-    # cgi py /usr/bin/python # can be multi
-    cgi py /home/linuxbrew/.linuxbrew/bin/python3
+    cgi py /usr/bin/python # can be multi
+    # cgi py /home/linuxbrew/.linuxbrew/bin/python3
     cgi bla ./cgi-bin/cgi_tester # can be multi
     
     # client_max_body_size 400 # just integer
