--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8001
+    listen 0.0.0.0:8005
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -16,18 +16,24 @@ server {
     # client_max_body_size 400 # just integer
     # upload_path uploads
     # redirection 302 /staticWebsite
-    # auto_index on
+    auto_index on
     # redirection 302 http://www.google.com/
+    location / {
+        root tests/staticWebsite/
+    }
     location /website {
         # server_name localhost.com #error
         # listen #error
-        root tests/staticWebsite/
+        root tests/static/
         # page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
         # redirection 302 http://www.facebook.com/
         #recieved:12799346|
         #         2000000000
+    }
+    location /websitess {
+        root tests/static/img/
     }
     location /uploads {
         allow_methods DELETE POST
