--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,11 +1,11 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8000
+    listen 0.0.0.0:8001
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
-    page_error 505 index.html # this is error can be multi
+    page_error 404 errorPages/404.html # this is error can be multi
     index index.html #index.php # can be multi
     root tests/ 
     cgi php ./cgi-bin/php-cgi # can be multi
