--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -19,7 +19,7 @@ server {
     auto_index on
     # redirection 302 http://www.google.com/
     location / {
-        root tests/
+        root tests/static/
     }
     location /website {
         # server_name localhost.com #error
