fix post empty body

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8003
+    listen 0.0.0.0:8000
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -18,9 +18,9 @@ server {
     # redirection 302 /staticWebsite
     auto_index on
     # redirection 302 http://www.google.com/
-    location / {
-        root tests/static/
-    }
+    # location / {
+    #     root tests/static/
+    # }
     location /website {
         # server_name localhost.com #error
         # listen #error
