--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8003
+    listen 0.0.0.0:8000
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -19,7 +19,7 @@ server {
     auto_index on
     # redirection 302 http://www.google.com/
     location / {
-        root tests/static/
+        root tests/
     }
     location /website {
         # server_name localhost.com #error
