fixing siege seg

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -13,13 +13,15 @@ server {
     # cgi py /home/linuxbrew/.linuxbrew/bin/python3
     cgi bla ./cgi-bin/cgi_tester # can be multi
     
-    # client_max_body_size 400 # just integer
+    client_max_body_size 2 # just integer
     # upload_path uploads
     # redirection 302 /staticWebsite
     auto_index on
     # redirection 302 http://www.google.com/
     location / {
+        # allow_methods DELETE POST
         root tests/
+
     }
     location /website {
         # server_name localhost.com #error
@@ -36,7 +38,7 @@ server {
         root tests/static/img/
     }
     location /uploads {
-        allow_methods DELETE POST
+        # allow_methods DELETE POST
         upload_path tests/
         # client_max_body_size 10000
         # root fwefwef
@@ -49,13 +51,17 @@ server {
 # can be multi servers
 # server {
 #     server_name test
-#     listen 8004
+#     allow_methods GET DELETE POST 
+#     listen 8002 # not working method not allowed
 #     # listen 800000
 #     index index.html
-#     root path/aa2
+#     root tests/static/
 #     auto_index on
-#     location /BETA {
-#         root fwefwef
-#         redirection 301 $scheme://www.mysite.com
-#     }
+#     # location /BETA {
+#     #     root fwefwef
+#     #     redirection 301 $scheme://www.mysite.com
+#     # }
 # }
+# curl --resolve test:80:127.0.0.1 http://localhost:8000
+
+#curl -X POST -H "Content-Type: plain/text" --data "BO
