--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8001
+    listen 0.0.0.0:8004
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -17,17 +17,19 @@ server {
     # upload_path uploads
     # redirection 302 /staticWebsite
     auto_index on
-    # redirection 302 http://www.google.com/
     location / {
         root tests/
+        redirection 302 website
     }
     location /website {
         # server_name localhost.com #error
         # listen #error
         root tests/static/
+        # client_max_body_size 100
         # page_error 404 errorPages/404.html
-        # allow_methods POST
+        allow_methods POST
         # auto_index off
+        #redirection 302 img/avatar.png
         # redirection 302 http://www.facebook.com/
         #recieved:12799346|
         #         2000000000
@@ -40,7 +42,6 @@ server {
         upload_path tests/
         # client_max_body_size 10000
         # root fwefwef
-        # redirection 301 /img/avatar.png
         # redirection 301 $scheme://www.mysite.com
     }
     # redirection 302 http://www.facebook.com/
@@ -49,7 +50,7 @@ server {
 # can be multi servers
 # server {
 #     server_name test
-#     listen 8004
+#     listen 8003
 #     # listen 800000
 #     index index.html
 #     root path/aa2
