--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8005
+    listen 0.0.0.0:8000
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -13,14 +13,14 @@ server {
     # cgi py /home/linuxbrew/.linuxbrew/bin/python3
     cgi bla ./cgi-bin/cgi_tester # can be multi
     
-    client_max_body_size 2 # just integer
+    # client_max_body_size 2 # just integer
     # upload_path uploads
     # redirection 302 /staticWebsite
     auto_index on
     location / {
         # allow_methods DELETE POST
         root tests/
-        redirection 302 website
+        # redirection 302 website
     }
     location /website {
         # server_name localhost.com #error
@@ -41,7 +41,7 @@ server {
     location /uploads {
         # allow_methods DELETE POST
         upload_path tests/
-        client_max_body_size 3020
+        # client_max_body_size 2
         # client_max_body_size 10000
         # root fwefwef
         # redirection 301 $scheme://www.mysite.com
@@ -65,3 +65,4 @@ server {
 # curl --resolve test:80:127.0.0.1 http://localhost:8000
 
 #curl -X POST -H "Content-Type: plain/text" --data "BO
+
