fixing mutliple error page

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,9 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8000
+    listen 0.0.0.0:8002
+    # listen 8009
+    # listen 120.0.0.0:8001
     # listen 127.0.0.1:8001
     # listen 8007
     # listen 209
@@ -28,7 +30,7 @@ server {
         root tests/static/
         # client_max_body_size 100
         # page_error 404 errorPages/404.html
-        allow_methods POST 
+        allow_methods POST GET
         # auto_index off
         #redirection 302 img/avatar.png
         # redirection 302 http://www.facebook.com/
@@ -42,7 +44,7 @@ server {
         # allow_methods DELETE POST
         upload_path tests/
         # client_max_body_size 2
-        # client_max_body_size 10000
+        client_max_body_size 100000000
         # root fwefwef
         # redirection 301 $scheme://www.mysite.com
     }
@@ -51,8 +53,8 @@ server {
 }
 # can be multi servers
 # server {
-#     server_name test
-#     listen 8003
+#     server_name www.example.com
+#     listen 80
 #     # listen 800000
 #     index index.html
 #     root tests/static/
@@ -65,4 +67,4 @@ server {
 # curl --resolve test:80:127.0.0.1 http://localhost:8000
 
 #curl -X POST -H "Content-Type: plain/text" --data "BO
-
+#curl http://www.example.com --resolve www.example.com:80:0.0.0.0 -v | head
