fix custom error pages

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,8 +1,9 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:800
-    # listen 8009
+    listen 0.0.0.0:8000
+    # listen 0.0.0.0:80
+    # listen 8000
     # listen 120.0.0.0:8001
     # listen 127.0.0.1:8001
     # listen 8007
@@ -52,18 +53,18 @@ server {
     auto_index on
 }
 # can be multi servers
-# server {
-#     server_name www.example.com
-#     listen 80
-#     # listen 800000
-#     index index.html
-#     root tests/static/
-#     auto_index on
-#     # location /BETA {
-#     #     root fwefwef
-#     #     redirection 301 $scheme://www.mysite.com
-#     # }
-# }
+server {
+    server_name www.example.com
+    listen 0.0.0.0:8000
+    # listen 800000
+    index index.html
+    root tests/static/
+    auto_index on
+    # location /BETA {
+    #     root fwefwef
+    #     redirection 301 $scheme://www.mysite.com
+    # }
+}
 # curl --resolve test:80:127.0.0.1 http://localhost:8000
 
 #curl -X POST -H "Content-Type: plain/text" --data "BO
