fix client keep hanging

--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -11,10 +11,9 @@ server {
     page_error 404 errorPages/404.html # this is error can be multi
     index index.html #index.php # can be multi
     root tests/ 
-    cgi php ./cgi-bin/php-cgi # can be multi
+    # cgi php ./cgi-bin/php-cgi # can be multi
     cgi py /usr/bin/python # can be multi
     # cgi py /home/linuxbrew/.linuxbrew/bin/python3
-    cgi bla ./cgi-bin/cgi_tester # can be multi
         
     # client_max_body_size 2 # just integer
     # upload_path uploads
@@ -22,6 +21,7 @@ server {
     auto_index on
     location / {
         # allow_methods DELETE POST
+        cgi bla ./cgi-bin/cgi_tester # can be multi
         root tests/
         # redirection 302 website
     }
@@ -53,18 +53,18 @@ server {
     auto_index on
 }
 # can be multi servers
-server {
-    server_name www.example.com
-    listen 0.0.0.0:8000
-    # listen 800000
-    index index.html
-    root tests/static/
-    auto_index on
-    # location /BETA {
-    #     root fwefwef
-    #     redirection 301 $scheme://www.mysite.com
-    # }
-}
+# server {
+#     server_name www.example.com
+#     listen 0.0.0.0:8000
+#     # listen 800000
+#     index index.html
+#     root tests/static/
+#     auto_index on
+#     # location /BETA {
+#     #     root fwefwef
+#     #     redirection 301 $scheme://www.mysite.com
+#     # }
+# }
 # curl --resolve test:80:127.0.0.1 http://localhost:8000
 
 #curl -X POST -H "Content-Type: plain/text" --data "BO
