--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,7 +2,7 @@ server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
     # listen 0.0.0.0:801
-    listen 127.0.0.1:800
+    listen 127.0.0.1:8001
     # listen 8007
     # listen 209
     page_error 404 errorPages/402.html # this is error can be multi
@@ -41,15 +41,15 @@ server {
     auto_index on
 }
 # can be multi servers
-# server {
-#     server_name test
-#     listen 8004
-#     # listen 800000
-#     index index.html
-#     root path/aa2
-#     auto_index on
-#     location /BETA {
-#         root fwefwef
-#         redirection 301 $scheme://www.mysite.com
-#     }
-# }
+server {
+    server_name test
+    listen 8001
+    # listen 800000
+    index index.html
+    root path/aa2
+    auto_index on
+    location /BETA {
+        root fwefwef
+        redirection 301 $scheme://www.mysite.com
+    }
+}
