--- a/configs/testerConfig.conf
+++ b/configs/testerConfig.conf
@@ -1,20 +1,21 @@
 server {
     server_name localhost
-    listen 127.0.0.1:8000
+    listen 127.0.0.1:8002
     index index.html
     root tests/ 
     cgi bla ./cgi-bin/cgi_tester
+    auto_index on
 
     location / {
         allow_methods GET
     }
 
-    location /post_body {
+    location /post_body/ {
         upload_path tests/ab/
         client_max_body_size 100
     }
 
-    location /directory/ {
+    location /directory {
         allow_methods GET
         root tests/YoupiBanane/
         index youpi.bad_extension
