fixing compiling errors

--- a/configs/testerConfig.conf
+++ b/configs/testerConfig.conf
@@ -4,6 +4,7 @@ server {
     index index.html
     root tests/ 
     cgi bla ./cgi-bin/cgi_tester
+    cgi bla ./cgi-bin/cgi_tester
     auto_index on
 
     location / {
