--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -1,7 +1,7 @@
 server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
-    listen 0.0.0.0:8000
+    listen 0.0.0.0:8001
     # listen 0.0.0.0:80
     # listen 8000
     # listen 120.0.0.0:8001
@@ -11,17 +11,17 @@ server {
     page_error 404 errorPages/404.html # this is error can be multi
     index index.html #index.php # can be multi
     root tests/ 
-    # cgi php ./cgi-bin/php-cgi # can be multi
+    cgi php /Users/hmellahi/.brew/bin/php-cgi # can be multi
     cgi py /usr/bin/python # can be multi
+    cgi bla ./cgi-bin/cgi_tester # can be multi
     # cgi py /home/linuxbrew/.linuxbrew/bin/python3
         
     # client_max_body_size 2 # just integer
     # upload_path uploads
-    # redirection 302 /staticWebsite
+    # redirection 302 /staticWebsite 
     auto_index on
     location / {
         # allow_methods DELETE POST
-        cgi bla ./cgi-bin/cgi_tester # can be multi
         root tests/
         # redirection 302 website
     }
