--- a/src/Conf/default.conf
+++ b/src/Conf/default.conf
@@ -11,7 +11,7 @@ server {
     page_error 404 errorPages/404.html # this is error can be multi
     index index.html #index.php # can be multi
     root tests/ 
-    cgi php /Users/hmellahi/.brew/bin/php-cgi # can be multi
+    cgi php ./cgi-bin/php-cgi # can be multi
     cgi py /usr/bin/python # can be multi
     cgi bla ./cgi-bin/cgi_tester # can be multi
     # cgi py /home/linuxbrew/.linuxbrew/bin/python3
