--- a/configs/default.conf
+++ b/configs/default.conf
@@ -2,7 +2,8 @@ server {
     server_name localhost# can be multi
     # listen 800000 # the port too can be multi
     # listen 0.0.0.0:801
-    listen 127.0.0.1:8000
+    listen 127.0.0.1:8001
+
     # listen 8007
     # listen 209
     page_error 404 errorPages/402.html # this is error can be multi
@@ -18,10 +19,16 @@ server {
     # redirection 302 /staticWebsite
     # auto_index on
     # redirection 302 http://www.google.com/
+    location /rediractiny {
+        redirection 302 http://www.google.com/
+    }
+
     location /website {
         # server_name localhost.com #error
         # listen #error
         root tests/staticWebsite/
+         client_max_body_size 3
+         allow_methods GET POST
         # page_error 404 errorPages/404.html
         # allow_methods POST
         # auto_index off
@@ -30,7 +37,7 @@ server {
         #         2000000000
     }
     location /uploads {
-        allow_methods DELETE POST
+        allow_methods GET DELETE POST
         upload_path tests/
         # client_max_body_size 10000
         # root fwefwef
@@ -41,15 +48,15 @@ server {
     auto_index on
 }
 # can be multi servers
-server {
-    server_name test
-    listen 8001
-    # listen 800000
-    index index.html
-    root path/aa2
-    auto_index on
-    location /BETA {
-        root fwefwef
-        redirection 301 $scheme://www.mysite.com
-    }
-}
+# server {
+#     server_name test
+#     listen 8001
+#     # listen 800000
+#     index index.html
+#     root path/aa2
+#     auto_index on
+#     location /BETA {
+#         root fwefwef
+#         redirection 301 $scheme://www.mysite.com
+#     }
+# }
