--- a/configs/testerConfig.conf
+++ b/configs/testerConfig.conf
@@ -12,8 +12,8 @@ server {
     }
 
     location /post_body/ {
-        upload_path tests/ab/
-        client_max_body_size 100
+        # upload_path tests/ab/
+        client_max_body_size 3
     }
 
     location /directory {
